Add and init search bar subnav UI

--- a/app/frontend/src/stylesheets/relive.scss
+++ b/app/frontend/src/stylesheets/relive.scss
@@ -13,12 +13,16 @@ a {
 	color: $linkColor;
 }
 
+.statusbar-overlay {
+	background: $primaryColour;
+}
+
 .center.sliding {
 	font-weight: 700;
 	color: white;
 }
 
-.navbar {
+.navbar, .subnavbar, .subnavbar-search .searchbar {
 	background: $primaryColour;
 	a.link, i {
 		color: white;
