Shifted homepage intro text into a content-block. Updated colour of cancel button when search is focused.

--- a/app/frontend/src/stylesheets/relive.scss
+++ b/app/frontend/src/stylesheets/relive.scss
@@ -24,7 +24,7 @@ a {
 
 .navbar, .subnavbar, .subnavbar-search .searchbar {
 	background: $primaryColour;
-	a.link, i {
+	a, i {
 		color: white;
 		&:hover {
 			color: grey;
