Very raw looking landing page with working search bar.
RUN
gulp build

Issues:
Hardcoded events.
CSS styling issues
VirtualList height not settled

--- a/app/frontend/src/stylesheets/relive.scss
+++ b/app/frontend/src/stylesheets/relive.scss
@@ -31,3 +31,9 @@ a {
 		}
 	}
 }
+
+.event-card-header-img .card-header {
+  height: 40vw;
+  background-size: cover;
+  background-position: center;
+}
