--- a/app/frontend/src/stylesheets/relive.scss
+++ b/app/frontend/src/stylesheets/relive.scss
@@ -9,7 +9,7 @@ $linkColor: #1B5DC8;
   transform: translateY(-50%);
 }
 
-body {
+body, h1, h2, h3, h4, h5, h6  {
 	font-family: Oxygen, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -19,6 +19,10 @@ p {
 
 a {
 	color: $linkColor;
+}
+
+.list-block ul {
+	background-color: #EFEFF4;
 }
 
 .statusbar-overlay {
@@ -46,13 +50,15 @@ a {
 }
 
 .event-card {
-  	border-bottom: 20px solid #EFEFF4;
+	margin-bottom: 25px;
+	border-top: 1px solid #C8C7CC;
+  	border-bottom: 1px solid #C8C7CC;
 	.event-card-header-img {
 		height: 150px;
 		background-size: cover;
 		background-position: center;
 		
-		h2 {
+		h1 {
 			position: absolute;
   			top: 40%;
   			left: 50%;
@@ -65,6 +71,7 @@ a {
 	.event-card-footer {
 		padding: 5px 20px;
 		height: 25px;
+		background-color: white;
 		.link {
 			@include vertical-align();
 			font-size: 12px;
