--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -57,6 +57,7 @@ a {
 	margin-bottom: 25px;
 	border-top: 1px solid #C8C7CC;
   	border-bottom: 1px solid #C8C7CC;
+	background-color: white;
 	.event-card-header-img {
 		height: 150px;
 		background-size: cover;
@@ -73,9 +74,8 @@ a {
 	}
 	
 	.event-card-footer {
-		padding: 5px 20px;
+		padding: 5px 15px;
 		height: 25px;
-		background-color: white;
 		.link {
 			@include vertical-align();
 			font-size: 12px;
@@ -90,4 +90,68 @@ a {
 			}
 		}
 	}
-} 
+}
+
+.post {
+	margin-bottom: 20px;
+	border-top: 1px solid #C8C7CC;
+  	border-bottom: 1px solid #C8C7CC;
+	background-color: white;
+	.post-data-origin-wrapper {
+		display: flex;
+		flex-flow: nowrap row;
+		justify-content: space-between;
+		.post-data {
+			padding: 15px;
+			font-size: 13px;
+			.post-author {
+				font-weight: 700;
+				padding-bottom: 10px;
+			}
+		}
+		.post-origin {
+			padding: 15px;
+			color: grey;
+		}
+	}
+}
+
+.image.post {
+	@extend .post;
+	.post-img {
+		height: 300px;
+		background-size: cover;
+		background-position: center;
+	}
+}
+
+.text.post {
+	@extend .post;
+	.post-data-origin-wrapper {
+		.post-data {
+			blockquote {
+				letter-spacing: 1px;
+				font-style: italic;
+				font-size: 15px;
+				margin: 1em 10px;
+				quotes: "\201C""\201D""\2018""\2019";
+				&:before, &:after {
+					font-family: cursive;
+					color: #ccc;
+					font-size: 4em;
+					line-height: 0.1em;
+				}
+				&:before {
+					content: open-quote;
+					margin-right: 0.25em;
+					vertical-align: -0.3em;
+				}
+				&:after {
+					content: close-quote;
+					margin-left: 0.25em;
+					vertical-align: -0.55em;
+				}
+			}
+		}
+	}
+}
