--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -39,6 +39,10 @@ a {
 	margin-top: 30px;
 }
 
+form .item-content {
+	background-color: white;
+}
+
 .navbar, .subnavbar, .subnavbar-search .searchbar {
 	background: $primaryColour;
 	a, i {
