--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -66,7 +66,7 @@ form .item-content {
 		height: 150px;
 		background-size: cover;
 		background-position: center;
-		
+
 		h1 {
 			position: absolute;
   			top: 40%;
@@ -76,7 +76,7 @@ form .item-content {
 			transform: translate(-50%, -50%);
 		}
 	}
-	
+
 	.event-card-footer {
 		padding: 5px 15px;
 		height: 25px;
@@ -158,4 +158,14 @@ form .item-content {
 			}
 		}
 	}
+}
+
+.infinite-scroll-preloader {
+  margin-top:-20px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.infinite-scroll-preloader .preloader {
+  width:34px;
+  height:34px;
 }
