Added custom preloader svg

--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -21,6 +21,14 @@ a {
 	color: $linkColor;
 }
 
+.preloader {
+	background-image: url(../img/preloader.svg); 	
+}
+
+.preloader-indicator-modal {
+	background: none;
+}
+
 .list-block ul {
 	background-color: #EFEFF4;
 }
