--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -74,14 +74,13 @@ form .item-content {
 		height: 150px;
 		background-size: cover;
 		background-position: center;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 
 		h1 {
-			position: absolute;
-  			top: 40%;
-  			left: 50%;
 			color: white;
 			margin: 0;
-			transform: translate(-50%, -50%);
 		}
 	}
 
