Fixed issue with back button not changing color together with the back arrow

--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -53,7 +53,7 @@ form .item-content {
 
 .navbar, .subnavbar, .subnavbar-search .searchbar {
 	background: $primaryColour;
-	a, i, .back.link {
+	a.link {
 		color: white;
 		&:hover {
 			color: grey;
