Fix flex for webkit safari

--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -22,7 +22,7 @@ a {
 }
 
 .preloader {
-	background-image: url(../img/preloader.svg); 	
+	background-image: url(../img/preloader.svg);
 }
 
 .preloader-indicator-modal {
@@ -74,7 +74,10 @@ form .item-content {
 		height: 150px;
 		background-size: cover;
 		background-position: center;
+    display: -webkit-flex;
 		display: flex;
+    -webkit-align-items: center;
+    -webkit-justify-content: center;
 		align-items: center;
 		justify-content: center;
 
