Updated text alignment of header image h1

--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -89,6 +89,9 @@ form .item-content {
 		h1 {
 			color: white;
 			margin: 0;
+			text-align: center;
+			line-height: 1.2em;
+			padding: 0 10px;
 		}
 	}
 
