--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -126,7 +126,7 @@ form .item-content {
 		font-family: 'Patua One';
 		font-size: 10vh;
 		font-weight: normal;
-		margin: -10vh 0 0;
+		margin: 0;
 	}
 	
 	.landing-caption {
@@ -138,8 +138,9 @@ form .item-content {
 	.searchbar {
 		background-color: transparent;
 		border: none;
-		margin-top: 20px;
+		margin-top: 30px;
 		padding: 0;
+		max-width: 600px;
 		&:after {
 			display: none;
 		}
