Updated hover color of Discover

--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -173,7 +173,7 @@ form .item-content {
 		-webkit-flex-flow: nowrap column;
 		
 		&:hover {
-			color: darken($primaryColour, 30%);
+			color: darken(white, 30%);
 		}
 		
 		.discover-caption {
