--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -133,6 +133,7 @@ form .item-content {
 		font-size: 2.5vh;
 		font-weight: 300;
 		text-align: center;
+		max-width: 600px;
 	}
 
 	.searchbar {
@@ -282,7 +283,7 @@ form .item-content {
 	.post-data-origin-wrapper {
 		.post-data {
 			blockquote {
-				letter-spacing: 0.7px;
+				letter-spacing: 0.6px;
 				font-size: 17px;
 				margin: 1em 10px;
 				quotes: "\201C""\201D""\2018""\2019";
