--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -20,6 +20,10 @@ $break-medium: 768px;
   hyphens:         auto;
 }
 
+body {
+  background: $primaryColour;
+}
+
 body, h1, h2, h3, h4, h5, h6 {
 	font-family: Oxygen, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -381,4 +385,58 @@ form .item-content {
 .toast-msg{
   text-align:center;
   font-weight:normal;
+}
+
+/**
+ * Framework7 3D Panels 1.0.0
+ * Framework7 plugin to add 3d effect for side panels
+ *
+ * http://www.idangero.us/framework7/plugins/
+ *
+ * Copyright 2015, Vladimir Kharlampidi
+ * The iDangero.us
+ * http://www.idangero.us/
+ *
+ * Licensed under MIT
+ *
+ * Released on: August 22, 2015
+ */
+body.panels-3d {
+  -webkit-perspective: 1100px;
+  -moz-perspective: 1100px;
+  perspective: 1100px;
+  overflow: hidden;
+}
+body.panels-3d .views {
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+body.panels-3d .panel-reveal.panel-left {
+  -webkit-transform: translate3d(-260px, 0, 0);
+  transform: translate3d(-260px, 0, 0);
+}
+body.panels-3d .panel-reveal.panel-right {
+  -webkit-transform: translate3d(260px, 0, 0);
+  transform: translate3d(260px, 0, 0);
+}
+body.panels-3d.with-panel-left-reveal .views {
+  -webkit-transform: translate3d(260px, 0, 0) rotateY(-30deg);
+  transform: translate3d(260px, 0, 0) rotateY(-30deg);
+  -webkit-transform-origin: right center;
+  transform-origin: right center;
+}
+body.panels-3d.with-panel-left-reveal .panel-left {
+  -webkit-transform: translate3d(0px, 0, 0);
+  transform: translate3d(0px, 0, 0);
+}
+body.panels-3d.with-panel-right-reveal .views {
+  -webkit-transform: translate3d(-260px, 0, 0) rotateY(30deg);
+  transform: translate3d(-260px, 0, 0) rotateY(30deg);
+  -webkit-transform-origin: left center;
+  transform-origin: left center;
+}
+body.panels-3d.with-panel-right-reveal .panel-right {
+  -webkit-transform: translate3d(0px, 0, 0);
+  transform: translate3d(0px, 0, 0);
 }
