--- a/app/src/stylesheets/welcomescreen.css
+++ b/app/src/stylesheets/welcomescreen.css
@@ -30,7 +30,7 @@
 .welcomescreen-picture{
   width: 100%;
   text-align: center;
-  margin-top: 20%;
+  margin-top: 13vh;
 }
 
 .welcomescreen-picture img {
