--- a/app/src/stylesheets/welcomescreen.css
+++ b/app/src/stylesheets/welcomescreen.css
@@ -32,6 +32,7 @@
     cursor: pointer;
     top: 45vh;
     right: 5vw;
+    padding: 20px;
     position: absolute;
     z-index: 9998;
     font-size: 30px;
@@ -41,6 +42,7 @@
     cursor: pointer;
     top: 45vh;
     left: 5vw;
+    padding: 20px;
     position: absolute;
     z-index: 9998;
     font-size: 30px;
