--- a/app/src/stylesheets/welcomescreen.css
+++ b/app/src/stylesheets/welcomescreen.css
@@ -85,6 +85,7 @@
 }
 
 .welcomescreen-container .swiper-pagination-bullet{
+  cursor: pointer;
   background: rgba(255, 255, 255, 0.9) !important;
 }
 
