Fix Save to Favourites background colour

--- a/app/src/stylesheets/relive.scss
+++ b/app/src/stylesheets/relive.scss
@@ -385,7 +385,7 @@ form .item-content {
   background-color: #FF5757;
 }
 
-.swipeout-close.swipeToSaveFavourites {
+.swipeout-actions-left a.swipeToSaveFavourites {
   background-color: #57C161;
 }
 
